# cmake-template

./: CMakeLists.txt
sub1/: CMakeLists.txt
